# dsa

./: .gitignore  CMakeLists.txt  README.md  compile_and_run.sh
src/: CMakeLists.txt  comm.hpp  fonts.hpp  main.cpp  signals.hpp  types.hpp  user_input.hpp  utils.hpp  view.hpp  window.cpp  window.hpp
src/assets/: fonts.hpp  images.hpp
src/comm/: comm.hpp  signals.hpp
src/game/: game.cpp  game.hpp  properties.hpp
src/game/entities/: creation.hpp  entity.hpp  proxies.hpp
src/game/entities/mother_ship/: mother_ship.cpp  mother_ship.hpp
src/game/entities/mothership/: mothership.cpp  mothership.hpp
src/game/simulation/: positioning.cpp  positioning.hpp  simulation.cpp  simulation.hpp
src/text/: fonts.hpp
src/types/: basic.hpp  input.hpp  physics.hpp  sdl.hpp
src/views/: game_wait_dialog.hpp  label.cpp  label.hpp  loader.hpp  positioning.hpp  start_screen.cpp  start_screen.hpp  view.cpp  view.hpp  widget.hpp
src/views/game_screen/: game_screen.cpp  game_screen.hpp
src/views/start_screen/: start_screen.cpp  start_screen.hpp
src/views/widgets/: cycle_menu.cpp  cycle_menu.hpp  label.cpp  label.hpp
src/widgets/: cycle_menu.cpp  cycle_menu.hpp  label.cpp  label.hpp  viewport.hpp  viewport_handle.hpp  widget.hpp
tests/: CMakeLists.txt  comm_tests.cpp  signal_tests.cpp  widget_tests.cpp  window_tests.cpp
